--- a/templates/folder.html
+++ b/templates/folder.html
@@ -57,7 +57,7 @@
             {{table | safe}}
             <div class ="left" style="{{ticker_style}}">
                 <h1>Ticker Symbol Lookup</h1>
-	        <p>{{ticker_description}}</p>
+	        <p>{{ticker.description}}</p>
 	        <table border=1>
 	            <thead>
 	                <tr>
@@ -73,20 +73,20 @@
 	            </thead>
 	            <tbody>
 		        <tr>
-		            <td>{{ticker_symbol}}</td>
-		            <td>{{ticker_name}}</td>
-		            <td>{{ticker_exchange}}</td>
-		            <td>{{ticker_industry}}</td>
-		            <td>{{ticker_website}}</td>
-		            <td>{{ticker_ceo}}</td>
-		            <td>{{ticker_issuetype}}</td>
-		            <td>{{ticker_sector}}</td>
+		                <td>{{ticker.symbol}}</td>
+		                <td>{{ticker.companyName}}</td>
+		                <td>{{ticker.exchange}}</td>
+		                <td>{{ticker.industry}}</td>
+		                <td>{{ticker.website}}</td>
+		                <td>{{ticker.CEO}}</td>
+		                <td>{{ticker.issueType}}</td>
+		                <td>{{ticker.sector}}</td>
 		        </tr>
 	            </tbody>
 	        </table>
                 <form action="#" method="post">
                     <div class="form_settings">
-                        <p><span>&nbsp;</span><input class="submit" type="submit" name="action" value="add {{add_symbol}}" style="float: right;"/></p>
+                        <p><span>&nbsp;</span><input class="submit" type="submit" name="action" value="add {{ticker.symbol}}" style="float: right;"/></p>
                     </div>
                 </form>
              </div>
