--- a/templates/index.html
+++ b/templates/index.html
@@ -42,6 +42,7 @@
                 <li><a href="https://twitter.com/meprogrammerguy/" target="_blank" >my Twitter</a></li>
                 <li><a href="http://www.wallstreetsurvivor.com/accountoverview/" target="_blank" >Wall Street Survivor</a></li>
             </ul>
+            <p style="color:red;">{{feedback | safe}}</p>
         </div>
         <div id="content">
             <h1>Scoreboard</h1>
@@ -72,7 +73,7 @@
             {{table | safe}}
             <form action="#" method="post">
             <div class="form_settings">
-                <p><span>&nbsp;</span><input class="submit" type="submit" name="post" value="post" style="float: right;"/></p>
+                <p><span>&nbsp;</span><input class="submit" type="submit" name="action" value="post" style="float: right;"/></p>
             </form>
             </div>
         </div>
